--- a/src/App/Body/Card/Bottom/index.scss
+++ b/src/App/Body/Card/Bottom/index.scss
@@ -2,13 +2,18 @@
   width: 100%;
   height: 100%;
   #title-div {
-    margin-bottom: 10px;
     width: 100%;
+    margin-bottom: 10px;
+    #title {
+      font-size: 16px;
+      font-weight: 600;
+    }
   }
   #author-div {
     width: 100%;
     #author {
-      color: #606060;
+      color: #a0a0a0;
+      font-size: 12px;
       &:hover {
         color: black;
         cursor: pointer;
